<resources>
    <string name="app_name">CuacaCoy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="top_level_domains">Top level domains</string>
    <string name="flag_image">flag image</string>
    <string name="weather_image">weather image</string>
    <string name="all">all</string>
    <string name="region">Region</string>
    <string name="population_count">%d</string>
    <string name="latitude_longitude">Latitude longitude</string>
    <string name="currencies">Currencies</string>
    <string name="languages">Languages</string>
    <string name="population">Population</string>
    <string name="time_zone">Time zone</string>
    <string name="independent">Independent</string>
    <string name="loading">loading</string>
    <string name="city">City</string>
    <string name="grant">Grant</string>
    <string name="turn_on">Turn on</string>
    <string name="permission_denied_msg">"Permission not Granted !\nGo to settings to grant permission"</string>
    <string name="turn_location_on_msg">"Please turn on the location !\nGo to settings to turn on location"</string>
    <string name="capital_city">Capital city</string>
</resources>